--- a/jitpack.yml
+++ b/jitpack.yml
@@ -4,4 +4,4 @@ before_install:
   - sdk install maven
   - mvn -v
 install:
-  - ./mvnw clean install -DskipTests -Dmaven.javadoc.skip=true
+  - ./mvnw clean install -DskipTests
